# uni-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: Doxyfile.in  preprocess-doxygen.py  unicode_version.hpp.in  version.hpp.in  version.ixx.in
dev/docs/: case_conversion_tables.md  multistage-lookup-tables.md
dev/tools/unicode_data_generator/: __main__.py  analyse_case_data.py  fine_tune.py  generate_cpp_file.py  generate_property_tables.py  generate_tables.py  generate_test_data.py  load_unicode_data.py
dev/tools/unicode_data_generator/src/unicode_data_generator/cli/: add_unicode_version_argument.py  main.py  parser.py
dev/tools/unicode_data_generator/src/unicode_data_generator/cli/commands/: analyze.py  clean.py  generate.py  list.py
dev/tools/unicode_data_generator/src/unicode_data_generator/core/: datasets.py  internal_error.py  optimal_size.py  paths.py  progress_bar.py  ranges.py  tables.py  test_fail.py
dev/tools/unicode_data_generator/src/unicode_data_generator/datasets/: case_mapping.py  datasets.py  interface.py  utf_encoding.py
dev/tools/unicode_data_generator/src/unicode_data_generator/dispatcher/: context.py  dispatcher.py
dev/tools/unicode_data_generator/src/unicode_data_generator/emitter/: emitter.py  identifiers.py  integers.py  test_emitter.py
dev/tools/unicode_data_generator/src/unicode_data_generator/encoders/: encoders.py  interface.py  multistage_lookup_tables.py
dev/tools/unicode_data_generator/src/unicode_data_generator/ucd/: code_point_data.py  code_point_properties.py  manager.py  parser.py
dev/tools/unicode_data_generator/src/unicode_data_generator/ucd/parsers/: case_folding.py  simple.py  special_casing.py  unicode_data.py  utility.py
dev/tools/unicode_table_generator/: generate_cpp_file.py  generate_tables.py  load_ucd_file.py  main.py  test_lookup_tables.py
include/uni-cpp/: all.hpp  encoding.hpp  ranges.hpp  string.hpp  uchar.hpp  utility.hpp  version.hpp
include/uni-cpp/impl/: inplace_vector.hpp  ranges.hpp  utf8.hpp  utility.hpp
include/uni-cpp/impl/encoding/: ascii.hpp  utf16.hpp  utf32.hpp  utf8.hpp
include/uni-cpp/impl/ranges/: approximately_sized_range.hpp  as_expected_range.hpp  base.hpp  cast_code_units_to.hpp  simple_view_adaptor.hpp  transcode.hpp  valid_code_unit_range.hpp  view_interface.hpp
include/uni-cpp/impl/string/: fwd.hpp  string.hpp  string_impl.hpp  string_literal.hpp
include/uni-cpp/impl/unicode_data/: all.hpp  case_conversion.hpp  case_mapping.hpp
include/uni-cpp/impl/unicode_data/data/: case_conversion.hpp
include/uni-cpp/impl/unicode_data/data/case_mapping/: data.hpp  data_embed.hpp  data_inline.hpp
include/uni-cpp/impl/unicode_data/embed/: end_embed_code.hpp  parse.hpp  start_embed_code.hpp  support.hpp
include/uni_cpp/: all.hpp  char.hpp  config.hpp  string.hpp  version.hpp
include/uni_cpp/impl/: unicode_version.hpp  version.hpp
src/: string.ixx  uchar.ixx  uni_cpp.ixx  utility.ixx  version.ixx
src/impl/unicode_data/: case_conversion.ixx  uni_cpp.impl.unicode_data.ixx
src/impl/unicode_data/data/: data.case_conversion.ixx
test/: CMakeLists.txt  char.cpp  string.cpp
test/src/: all.cpp  ascii.hpp  bugspray.hpp  case_conversion.cpp  catch2.hpp  char.cpp  string.cpp  test_data.hpp  test_data.ixx  uchar.cpp  utf.hpp  utf8.hpp  utf_encoding.cpp  utility.hpp
test/src/encoding/: ascii.hpp  encoding.hpp  macros.hpp  utf.hpp
test/src/ranges/: base.hpp  to_input.hpp  transcode.cpp  transcode_view.cpp
test/src/string/: ascii_constructors.cpp  common.cpp  evil_allocator.hpp  literals.cpp  ranges.hpp  unicode_constructors.cpp  utility.hpp
test/test_data/: casefold_mappings.txt  titlecase_mappings.txt  uppercase_mappings.txt  utf16_encoding.txt  utf8_encoding.txt
